# bx

./: CLAUDE.md  Cargo.toml  README.md
src/: annotations.rs  app.rs  buffer.rs  commands.rs  config.rs  diff.rs  export.rs  inspector.rs  main.rs  search.rs  structs.rs  transform.rs
src/analysis/: arch.rs  checksum.rs  cyclic.rs  entropy.rs  headers.rs  magic.rs  mod.rs  xor.rs
src/ui/: annopane.rs  hexview.rs  infobar.rs  mod.rs
